<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.SingUpActivity">

        <View
            android:id="@+id/union"
            android:layout_width="643dp"
            android:layout_height="600dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="-10dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/union_3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/create_acco"
            android:layout_width="241dp"
            android:layout_height="90dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/inter"
            android:gravity="center_vertical"
            android:text="@string/create_acco"
            android:textAppearance="@style/create_acco"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lineHeight="39sp" />

        <EditText
            android:id="@+id/enter_email"
            android:layout_width="333dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="39dp"
            android:layout_marginTop="200dp"
            android:fontFamily="@font/inter"
            android:gravity="center_vertical"
            android:hint="@string/enter_email"
            android:textAppearance="@style/enter_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/create_user"
            android:layout_width="333dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="39dp"
            android:layout_marginTop="71dp"
            android:fontFamily="@font/inter"
            android:gravity="center_vertical"
            android:hint="@string/create_user"
            android:textAppearance="@style/create_user"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enter_email" />

        <EditText
            android:id="@+id/create_pass"
            android:layout_width="333dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="39dp"
            android:layout_marginTop="71dp"
            android:fontFamily="@font/inter"
            android:gravity="center_vertical"
            android:hint="@string/create_pass"
            android:textAppearance="@style/create_pass"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_user" />

        <Button
            android:id="@+id/btn_join_now"
            android:layout_width="229dp"
            android:layout_height="54dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="99dp"
            android:layout_marginTop="229dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="54dp"
            android:background="@drawable/rectangle_1"
            android:text="@string/sing_up"
            android:textColor="@color/text_color"
            android:textSize="36dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.47"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.926" />




    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>