<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.GetStartedActivity"
        tools:viewBindingIgnore="true">


        <View
            android:id="@+id/union"
            android:layout_width="643dp"
            android:layout_height="713dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="32dp"
            android:layout_marginTop="-50dp"
            android:background="@drawable/union_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/mask_image_1"
            android:layout_width="68dp"
            android:layout_height="68dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="66dp"
            android:background="@drawable/image2"
            android:elevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <View
            android:id="@+id/mask_image_2"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="80dp"
            android:background="@drawable/image1"
            android:elevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/let_s_get_s"
            android:layout_width="342dp"
            android:layout_height="190dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="33dp"
            android:layout_marginTop="300dp"
            android:layout_marginEnd="53dp"
            android:layout_marginBottom="156dp"
            android:gravity="top"
            android:lineSpacingExtra="-16sp"
            android:text="@string/let_s_get_s"
            android:textAppearance="@style/let_s_get_s"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/grow_togeth"
            android:layout_width="143dp"
            android:layout_height="34dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="33dp"
            android:layout_marginBottom="150dp"
            android:fontFamily="@font/inter"
            android:gravity="top"
            android:text="@string/grow_togeth"
            android:textAppearance="@style/grow_togeth"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_join_now"
            android:layout_width="281dp"
            android:layout_height="62dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="74dp"
            android:layout_marginEnd="73dp"
            android:layout_marginBottom="48dp"
            android:background="@drawable/rectangle_1"
            android:text="@string/join_now"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>